assets/styles/index.css
/* Defaults */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  -webkit-font-smoothing: antialiased;
  background: #141414;
  color: #e5e5e5;
  font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu,
    sans-serif;
  font-size: 16px;
  line-height: 1.2;
}

/* Header & Nav */

.header {
  z-index: 9;
  position: fixed;
  top: 0;
  width: 100%;
  height: 68px;
  padding: 0 4%;
  background-color: #141414;
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: center;
  transition: all 0.5s;
}

.header.transparent {
  background-color: transparent;
  background-image: linear-gradient(
    180deg,
    rgba(0, 0, 0, 0.7) 10%,
    transparent
  );
}


.logo {
  margin: 0;
  padding: 0;
  margin-right: 25px;
  width: 150px;
  height: 34px;
}

.logo a,
.logo a:hover,
.logo a:active,
.logo a:visited {
  font-weight: 700;
  font-size: 24px;
  line-height: 34px;
  text-decoration: none;
  text-transform: uppercase;
  color: #e50914;
}

.logo img {
  background-size: contain;
}

.nav {
  width: 100%;
  list-style: none;
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: center;
}

.nav li {
  margin-left: 20px;
}

.nav a,
.nav a:hover,
.nav a:active,
.nav a:visited {
  font-size: 14px;
  text-decoration: none;
  color: #e5e5e5;
}

.nav a:hover {
  color: #b1b1b1;
}

.nav .right {
  margin-left: auto;
}

.nav .right a {
  padding: 8px 16px;
  background-color: #e50914;
  border-radius: 4px;
  color: #e5e5e5;
}

/* hero */

.hero {
  width: 100%;
  height: 600px;
  overflow: hidden;
  position: relative;
}

.hero .background-video {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  padding: 0;
  object-fit: cover;
}

/* rows */

#row-0 {
  margin-top: -100px;
}

.row {
  margin: 20px 0;
}

.row-title {
  font-size: 20px;
  vertical-align: bottom;
  margin: 0 56px 0;
}

.row-container {
  position: relative;
  padding: 15px 0;
  max-width: 100%;
  margin: 0;
}

.row-wrapper {
  overflow-x: auto;
  -ms-overflow-style: none;
  scrollbar-width: none;
  cursor: grab;
}

.row-wrapper::-webkit-scrollbar {
  display: none;
}

.row-items {
  display: flex;
  flex-flow: row nowrap;
  gap: 15px;
  padding: 0 56px;
}

.row-item {
  width: 240px;
  height: 120px;
  border-radius: 4px;
  overflow: clip;
}

.row-card {
  position: relative;
  width: 100%;
  height: 100%;
  transform-style: preserve-3d;
  transition: 0.3s all ease-in-out;
}

.row-item:hover .row-card {
  transform: rotateY(180deg);
}

.row-card-front,
.row-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
}

.row-card-front {
  background-color: red;
}

.row-card-back {
  background-color: blue;
  transform: rotateY(180deg);
}

.row-control {
  position: absolute;
  top: 0;
  bottom: 0;
  font-size: 20px;
  line-height: 100%;
  width: 60px;
  text-align: center;
  color: #fff;
  border: none;
  opacity: 0.2;
  transition: all 200ms ease-in-out;
}

.row-control:hover {
  opacity: 1;
  cursor: pointer;
}

.row-arrow-left {
  left: 0;
  background: linear-gradient(to left, transparent 0%, black 200%);
}

.row-arrow-right {
  right: 0;
  background: linear-gradient(to right, transparent 0%, black 200%);
}

